fixed button alignment on the main page

--- a/car-reviews/src/components/MainPage/searchbar.css
+++ b/car-reviews/src/components/MainPage/searchbar.css
@@ -1,4 +1,15 @@
-@media (max-width: 1300px) {
+/* .searchbar-buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+};
+
+.searchbar-button-links {
+    margin-left: 20;
+    margin-right: 20;
+};
+
+@media (max-width: 400px) {
     .searchbar-buttons-container {
         display: flex;
         flex-direction: column;
@@ -7,10 +18,22 @@
     };
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 500px) {
     .searchbar-buttons-links {
-        margin-left: auto;
-        margin-right: auto;
         margin-bottom: 10px;
+        margin-left: 10;
+        margin-right: 10;
     };
+} */
+
+.searchbar-buttons {
+    margin-bottom: 10px;
+}
+
+@media (min-width: 450px){
+    .searchbar-buttons-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
